fix: Increase links gap

--- a/blog/css/homepage.css
+++ b/blog/css/homepage.css
@@ -30,7 +30,7 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 10px;
+    gap: 25px;
     font-size: large;
 }
 
